# ComfyUI-Noctyra

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  __init__.py  install.py  mocap_models_manifest.json  nodes.py  pyproject.toml  requirements.txt  sidecar_requirements.txt
fonts/: 放字体到这里.txt
nodes/: __init__.py  _utils.py  _vendor.py  dewatermark.py  dewatermark_doubao.py  dewatermark_gemini.py  dewatermark_invisible.py  easyai_api.py  identify.py  image.py  model_downloader.py  video.py  watermark.py  watermark_grid.py
nodes/motion/: __init__.py  _bvh.py  _glb.py  _paths.py  _runtime.py  _selfcheck.py  _skeleton.py  _types.py  export.py  gvhmr.py  hamer.py  merge.py  wilor.py
nodes/motion/sidecar/: run_hamer.py  run_merge.py  run_wilor.py
nodes/watermark_add/: __init__.py  fullscreen.py  grid.py  image_wm.py  text.py  trim.py  video_wm.py
nodes/watermark_remove/: __init__.py  doubao.py  downloader.py  gemini.py  identify.py  invisible.py  region.py
web/: noctyra_dynamic.js
wheels/: detectron2-0.6+fd27788pt2.3.1cu121-cp310-cp310-win_amd64.whl
workflows/: 图像添加水印.json
